# alt-memory

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Dockerfile.alpine  README.md  __init__.py  _check_gaps.py  _test_backends.py  benchmark_mempalace.py  benchmark_tools.py  cli.py  embedder.py  faiss_store.py  knowledge_graph.py  list.md  palace.py  pyproject.toml  stress_test.py
.mypy_cache/3.14/: cache.0.db-shm  cache.0.db-wal  cache.1.db-shm  cache.1.db-wal  cache.10.db-shm  cache.10.db-wal  cache.11.db-shm  cache.11.db-wal  cache.12.db-shm  cache.12.db-wal  cache.13.db-shm  cache.13.db-wal  cache.14.db-shm  cache.14.db-wal  cache.15.db-shm  cache.15.db-wal  cache.2.db-shm  cache.2.db-wal  cache.3.db-shm  (+13 more)
alt_memory/: __init__.py  __main__.py  audit.md  changes.md  cli.py  closet_llm.py  config.py  convo_miner.py  convo_scanner.py  corpus_origin.py  dedup.py  dialect.py  diary_ingest.py  dim_graph.py  dimension.py  domain_detector_local.py  dynamics.py  entity_detector.py  entity_registry.py  exporter.py  fact_checker.py  format_miner.py  gateways.py  general_extractor.py  hallways.py  hooks_cli.py  layers.py  llm_client.py  llm_refine.py  mcp_server.py  migrate.py  miner.py  node_llm.py  normalize.py  onboarding.py  project_scanner.py  query_sanitizer.py  record_ingest.py  regression-report.md  repair.py  (+8 more)
benchmarks/: alt-bench.py  convomem_bench.py  locomo_bench.py  longmemeval_bench.py  membench_bench.py  results_kai_locomo_hybrid_dialog_top50.json  results_kai_locomo_hybrid_fixed_dialog_top50.json  results_kai_locomo_raw_dialog_top50.json  results_kai_locomo_raw_session_top50.json  results_kai_session_20260529_1454.jsonl  results_kai_session_20260529_1505.jsonl
docs/: personas.md
tests/: conftest.py  test_dimension_ops.py  test_embedders.py  test_faiss_store.py  test_import_export.py  test_knowledge_graph.py  test_persona.py
(+39 files in other folders)
